Added error reporting endpoint. Removed some unused endpoints. DAT-1027
