# api_server/openapi_server/models/__init__.py
@@ -3,4 +3,6 @@
 # flake8: noqa
 from __future__ import absolute_import
 # import models into model package
+from openapi_server.models.build_other_status import BuildOtherStatus
 from openapi_server.models.build_trigger_status import BuildTriggerStatus
+from openapi_server.models.error_report import ErrorReport
