# api_server/openapi_server/openapi/openapi.yaml
@@ -17,7 +17,7 @@ security:
 paths:
   /build-statuses-other:
     get:
-      description: Get a list of all other build statuses
+      description: Get a list of last 20 other build statuses
       operationId: build_statuses_other_get
       responses:
         200:
@@ -30,39 +30,7 @@ paths:
           description: Scheme with multiple other build statuses
         204:
           description: No content
-      summary: Get all other build statuses
-      x-openapi-router-controller: openapi_server.controllers.buildstatuses_controller
-  /build-statuses-other/{status}:
-    get:
-      description: Get a list of all other build statuses with a specific status
-      operationId: build_statuses_other_status_get
-      parameters:
-      - description: A unique status identifier
-        explode: false
-        in: path
-        name: status
-        required: true
-        schema:
-          enum:
-          - failing
-          - pending
-          - passing
-          type: string
-        style: simple
-      responses:
-        200:
-          content:
-            application/json:
-              schema:
-                items:
-                  $ref: '#/components/schemas/BuildOtherStatus'
-                type: array
-          description: Scheme with multiple other build statuses
-        204:
-          description: No content
-        404:
-          description: Status not of correct type
-      summary: Get all other build statuses by status
+      summary: Get last 20 other build statuses
       x-openapi-router-controller: openapi_server.controllers.buildstatuses_controller
   /build-statuses-triggers:
     get:
@@ -81,37 +49,23 @@ paths:
           description: No content
       summary: Get all build trigger statuses
       x-openapi-router-controller: openapi_server.controllers.buildstatuses_controller
-  /build-statuses-triggers/branch/{branch}:
+  /error-reporting:
     get:
-      description: Get a list of all build trigger statuses from a specific branch
-      operationId: build_statuses_triggers_branch_branch_get
-      parameters:
-      - description: A unique branch identifier
-        explode: false
-        in: path
-        name: branch
-        required: true
-        schema:
-          enum:
-          - master
-          - develop
-          type: string
-        style: simple
+      description: Get a list of last 20 error reportings
+      operationId: error_reporting_get
       responses:
         200:
           content:
             application/json:
               schema:
                 items:
-                  $ref: '#/components/schemas/BuildTriggerStatus'
+                  $ref: '#/components/schemas/ErrorReport'
                 type: array
-          description: Scheme with multiple build trigger statuses
+          description: Scheme with multiple error reportings
         204:
           description: No content
-        404:
-          description: Branch not of correct type
-      summary: Get all build trigger statuses by branch
-      x-openapi-router-controller: openapi_server.controllers.buildstatuses_controller
+      summary: Get last 20 error reportings
+      x-openapi-router-controller: openapi_server.controllers.errorreporting_controller
 components:
   responses:
     BuildTriggerStatuses:
@@ -130,6 +84,14 @@ components:
               $ref: '#/components/schemas/BuildOtherStatus'
             type: array
       description: Scheme with multiple other build statuses
+    ErrorReporting:
+      content:
+        application/json:
+          schema:
+            items:
+              $ref: '#/components/schemas/ErrorReport'
+            type: array
+      description: Scheme with multiple error reportings
   schemas:
     BuildTriggerStatus:
       example:
@@ -200,6 +162,44 @@ components:
       - project_id
       - start_time
       - status
+      type: object
+    ErrorReport:
+      example:
+        id: 1a9390e9-4ac5-4527-8e5e-05d2d153ada0
+        json_payload: {}
+        log_name: random-log-name
+        receive_timestamp: 2019-09-01T12:00:00+02:00
+        resource: {}
+        source_location: {}
+        text_payload: random-text-payload
+        trace: random-trace
+      properties:
+        id:
+          type: string
+        json_payload:
+          type: object
+        log_name:
+          type: string
+        receive_timestamp:
+          format: date-time
+          type: string
+        resource:
+          type: object
+        source_location:
+          type: object
+        text_payload:
+          type: string
+        trace:
+          type: string
+      required:
+      - id
+      - json_payload
+      - log_name
+      - receive_timestamp
+      - resource
+      - source_location
+      - text_payload
+      - trace
       type: object
   securitySchemes:
     ApiKeyAuth:
